--- a/AutoPurge/packages.config
+++ b/AutoPurge/packages.config
@@ -2,13 +2,17 @@
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.5.1" targetFramework="net48" />
   <package id="MailKit" version="4.10.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.2" targetFramework="net48" />
   <package id="MimeKit" version="4.10.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
   <package id="System.Formats.Asn1" version="9.0.2" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.6.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.2" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
